# injectme

./: LICENSE  Makefile  README.md  requirements.in  requirements.txt  setup.cfg
.github/workflows/: tests.yaml
docs/source/: api.rst  conf.py  getstarted.rst  index.rst  logging.rst
docs/source/guides/: __init__.rst  factories.rst  inheritance.rst  injecting.rst  injectors.rst  registries.rst  simple_api.rst
src/injectme/: __init__.py  decorator.py  errors.py  global_registry.py  injector.py  registry.py  simple_api.py
tests/: example_dep.py  test_advanced.py  test_decorator.py  test_global_registry.py  test_injector.py  test_registry.py  test_simple_api.py
