[metadata]
name = injectme
version = attr: injectme.__version__
author = zuczekgnojak
description = Small DI library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zuczekgnojak/injectme
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = injectme
python_requires = >=3.7
